<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_arrow_back_"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_icon" />

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_larger"
        android:layout_marginTop="@dimen/spacing_giant_two"
        android:layout_marginEnd="@dimen/spacing_larger"
        android:contentDescription="@string/cd_icon"
        android:src="@drawable/logo_posyandu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/spacing_huge"
        android:layout_marginTop="@dimen/spacing_huger_two"
        android:layout_marginEnd="@dimen/spacing_huge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_logo">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_huge"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/usernameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:padding="@dimen/spacing_small" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameTil"
                android:layout_marginTop="@dimen/spacing_large_four"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:padding="@dimen/spacing_small" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_smaller"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="@dimen/font_title_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_smaller"
                android:layout_marginTop="@dimen/spacing_giant_three"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/font_title_content" />

            <!--Forgot Password-->
            <TextView
                android:id="@+id/forgotTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="5dp"
                android:text="@string/text_lupa_password"
                android:textColor="@color/color_blue80"
                android:textSize="@dimen/font_title_content" />

            <!--Login Button-->
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotTv"
                android:layout_marginStart="@dimen/spacing_giant"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_giant"
                android:background="@drawable/shape_bottom"
                android:text="@string/masuk"
                android:textColor="@color/white" />

        </RelativeLayout>

    </ScrollView>

    <!--No Account Register-->
    <TextView
        android:id="@+id/noAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_giant"
        android:layout_marginTop="@dimen/spacing_regular"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="10dp"
        android:text="@string/text_belum_punya_akun"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/noAccountTvReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:layout_marginStart="@dimen/spacing_huger_four"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="10dp"
        android:text="Register"
        android:textColor="@color/color_blue80"
        android:textSize="@dimen/font_large"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>