<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view_helper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        app:layout_constraintDimensionRatio="H, 5:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@drawable/img_onboarding1" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_image_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:overScrollMode="never"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_regular"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="3"
        tools:listitem="@layout/item_indicator_small"/>

    <TextView
        android:id="@+id/tv_title_on_boarding"
        style="@style/RevampText.MontserratH3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@+id/view_helper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_welcom_onboarding"/>

    <TextView
        android:id="@+id/tv_desc_on_boarding"
        style="@style/RevampText.MontserratR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_regular"
        android:layout_marginEnd="@dimen/spacing_large"
        android:letterSpacing="0.05"
        android:lineSpacingMultiplier="1.5"
        android:textAlignment="center"
        android:textColor="@color/color_gray4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_on_boarding"
        tools:text="Collect the points and redeem it with various rewards" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/spacing_regular"
        android:padding="@dimen/spacing_regular"
        android:background="@drawable/rounded_bottom"
        android:text="@string/tx_next"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_in_desc" />

    <TextView
        android:id="@+id/tv_sign_in_desc"
        style="@style/RevampText.MontserratR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:text="@string/text_desc_sign_in"
        android:textColor="@color/color_gray4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_in"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sign_in"
        style="@style/RevampText.MontserratR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_tiny"
        android:text="@string/text_sign_in"
        android:textColor="#0D6E8A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sign_in_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_sign_in_desc"
        app:layout_constraintTop_toTopOf="@+id/tv_sign_in_desc" />


</androidx.constraintlayout.widget.ConstraintLayout>